# Parser_ya_maps

./: Dockerfile  README.md  celery_app.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  readme.me  requirements.txt  run_parser.py  tasks.py
.github/workflows/: deploy_in_my_server.yml  python-app.yml
core/: adb.py  celery_app.py  clianing_tmp.py  common.py  config.py  db.py  generate_cvs.py  tasks.py  validate_parse_table.py  work_bd.py
db/: database.py  session_manager.py
db/repositories/: base.py  category_repo.py  city_repo.py  organisation_repo.py
db/services/: organisation_service.py
parser/: __init__.py  driver_pool.py  new_parser_card.py  old_parser_card.py  parser_card.py  parser_city_in_wiki.py  parser_site.py  parser_ya_page.py  view_get.py  views.py
parser/models/: __init__.py  city_all.py  citys.py  db_helper.py
