[project]
name = "parser-ya-maps"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "fastapi[all]>=0.135.2",
    "lxml>=6.0.2",
    "setuptools>=82.0.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.42.0",
]
